--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Home button font added -->
+    <script src="https://kit.fontawesome.com/e42d89ec77.js" crossorigin="anonymous"></script>
+    
     <meta
       name="description"
       content="Web site created using create-react-app"
